fix: sections overflow was fixed

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -95,7 +95,7 @@ body {
         height: 580px;
         position: relative;
         overflow: hidden;
-        
+
         video {
             width: 100%;
             height: 100%;
@@ -140,6 +140,7 @@ body {
     &.extended {
         padding-top: 72px;
         padding-bottom: 72px;
+        overflow-x: hidden;
     }
 }
 
@@ -512,8 +513,4 @@ footer {
             grid-column-start: 8;
         }
     }
-}
-
-section {
-    overflow-x: hidden;
 }
